MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Residence_Number__c.field-meta.xml
<CustomField>
    <fullName>Residence_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Residence Number</label>
    <type>Phone</type>
</CustomField>