MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Retired_Comments__c.field-meta.xml
<CustomField>
    <fullName>Retired_Comments__c</fullName>
    <label>Retired Comments</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RetiredReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Looking for townhouse</fullName>
            </value>
            <value>
                <fullName>Looking for villa</fullName>
            </value>
            <value>
                <fullName>Looking for apartment</fullName>
            </value>
            <value>
                <fullName>Looking for plot</fullName>
            </value>
            <value>
                <fullName>Better offer by competition</fullName>
                <isActive>false</isActive>
                <label>Better offer by competition</label>
            </value>
            <value>
                <fullName>Broker commission</fullName>
                <isActive>false</isActive>
                <label>Broker commission</label>
            </value>
            <value>
                <fullName>Broker enquiry</fullName>
                <isActive>false</isActive>
                <label>Broker enquiry</label>
            </value>
            <value>
                <fullName>Broker registration</fullName>
                <isActive>false</isActive>
                <label>Broker registration</label>
            </value>
            <value>
                <fullName>Indirect customer registered with a broker</fullName>
                <isActive>false</isActive>
                <label>Indirect customer registered with a broker</label>
            </value>
            <value>
                <fullName>Invalid mobile number</fullName>
                <isActive>false</isActive>
                <label>Invalid mobile number</label>
            </value>
            <value>
                <fullName>Job seeker/ applicant</fullName>
                <isActive>false</isActive>
                <label>Job seeker/ applicant</label>
            </value>
            <value>
                <fullName>Lease enquiry/request</fullName>
                <isActive>false</isActive>
                <label>Lease enquiry/request</label>
            </value>
            <value>
                <fullName>Looking for Abu Dhabi mainland</fullName>
                <isActive>false</isActive>
                <label>Looking for Abu Dhabi mainland</label>
            </value>
            <value>
                <fullName>Looking for Hudayriyat Island</fullName>
                <isActive>false</isActive>
                <label>Looking for Hudayriyat Island</label>
            </value>
            <value>
                <fullName>Looking for International projects</fullName>
                <isActive>false</isActive>
                <label>Looking for International projects</label>
            </value>
            <value>
                <fullName>Looking for Mariyah Island</fullName>
                <isActive>false</isActive>
                <label>Looking for Mariyah Island</label>
            </value>
            <value>
                <fullName>Looking for Reem Island</fullName>
                <isActive>false</isActive>
                <label>Looking for Reem Island</label>
            </value>
            <value>
                <fullName>Looking for Sadiyaat  Island</fullName>
                <isActive>false</isActive>
                <label>Looking for Sadiyaat  Island</label>
            </value>
            <value>
                <fullName>Looking for Yas Island</fullName>
                <isActive>false</isActive>
                <label>Looking for Yas Island</label>
            </value>
            <value>
                <fullName>Looking for future project in certain location in UAE</fullName>
                <isActive>false</isActive>
                <label>Looking for future project in certain location in UAE</label>
            </value>
            <value>
                <fullName>Looking for lower downpayment</fullName>
                <isActive>false</isActive>
                <label>Looking for lower downpayment</label>
            </value>
            <value>
                <fullName>Looking for outside Abu Dhabi</fullName>
                <isActive>false</isActive>
                <label>Looking for outside Abu Dhabi</label>
            </value>
            <value>
                <fullName>Mobile switched off</fullName>
                <isActive>false</isActive>
                <label>Mobile switched off</label>
            </value>
            <value>
                <fullName>No answer after 3 calls</fullName>
                <isActive>false</isActive>
                <label>No answer after 3 calls</label>
            </value>
            <value>
                <fullName>Over budget</fullName>
                <isActive>false</isActive>
                <label>Over budget</label>
            </value>
            <value>
                <fullName>Payment Plan not suitable</fullName>
                <isActive>false</isActive>
                <label>Payment Plan not suitable</label>
            </value>
            <value>
                <fullName>Project sold out</fullName>
                <isActive>false</isActive>
                <label>Project sold out</label>
            </value>
            <value>
                <fullName>Size is too big</fullName>
                <isActive>false</isActive>
                <label>Size is too big</label>
            </value>
            <value>
                <fullName>Size is too small</fullName>
                <isActive>false</isActive>
                <label>Size is too small</label>
            </value>
            <value>
                <fullName>Supplier enquiry</fullName>
                <isActive>false</isActive>
                <label>Supplier enquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>