MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Retired_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Retired_Date_and_Time__c</fullName>
    <description>Modon-Egypt implementation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Retired Date and Time</label>
    <type>DateTime</type>
</CustomField>