MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Retiredby__c.field-meta.xml
<CustomField>
    <fullName>Retiredby__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retired by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeadRetiredby</relationshipName>
    <type>Lookup</type>
</CustomField>