MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/RetiredReason__c.field-meta.xml
<CustomField>
    <fullName>RetiredReason__c</fullName>
    <label>Retired Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate lead</fullName>
            </value>
            <value>
                <fullName>End of Event</fullName>
            </value>
            <value>
                <fullName>Future Potential</fullName>
            </value>
            <value>
                <fullName>Interest Lost</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Irrelevant Number</fullName>
            </value>
            <value>
                <fullName>Job Seeker</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>No Number</fullName>
            </value>
            <value>
                <fullName>Non-UAE National</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Payment Plan</fullName>
                <label>Payment plan</label>
            </value>
            <value>
                <fullName>Unit Location</fullName>
            </value>
            <value>
                <fullName>Unit Type</fullName>
            </value>
            <value>
                <fullName>Reputation (Track Record)</fullName>
            </value>
            <value>
                <fullName>Broker Inquiry</fullName>
            </value>
            <value>
                <fullName>Test lead</fullName>
            </value>
            <value>
                <fullName>Supplier Enquiry</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Did not register</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
                <isActive>false</isActive>
                <label>Cross Sell</label>
            </value>
            <value>
                <fullName>Lost - Test Lead</fullName>
                <isActive>false</isActive>
                <label>Lost - Test Lead</label>
            </value>
            <value>
                <fullName>Lost- Non-Sales enquiry/request</fullName>
                <isActive>false</isActive>
                <label>Lost- Non-Sales enquiry/request</label>
            </value>
            <value>
                <fullName>Lost-Availability</fullName>
                <isActive>false</isActive>
                <label>Lost-Availability</label>
            </value>
            <value>
                <fullName>Lost-Dealing with Broker</fullName>
                <isActive>false</isActive>
                <label>Lost-Dealing with Broker</label>
            </value>
            <value>
                <fullName>Lost-Duplicate Lead</fullName>
                <isActive>false</isActive>
                <label>Lost-Duplicate Lead</label>
            </value>
            <value>
                <fullName>Lost-Future potential</fullName>
                <isActive>false</isActive>
                <label>Lost-Future potential</label>
            </value>
            <value>
                <fullName>Lost-Market conditions</fullName>
                <isActive>false</isActive>
                <label>Lost-Market conditions</label>
            </value>
            <value>
                <fullName>Lost-Payment Plan</fullName>
                <isActive>false</isActive>
                <label>Lost-Payment Plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>