MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/RetirementComments__c.field-meta.xml
<CustomField>
    <fullName>RetirementComments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retirement Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>