MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Sales_Executive__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Executive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>