MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Sales_Hostess__c.field-meta.xml
<CustomField>
    <fullName>Sales_Hostess__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Hostess</label>
    <length>50</length>
    <type>Text</type>
</CustomField>