MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/SalesOrigin__c.field-meta.xml
<CustomField>
    <fullName>SalesOrigin__c</fullName>
    <label>Sales Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>