MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/SalesType__c.field-meta.xml
<CustomField>
    <fullName>SalesType__c</fullName>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential Sale</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>