MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/SecondaryMobile__c.field-meta.xml
<CustomField>
    <fullName>SecondaryMobile__c</fullName>
    <description>Field for Modon Egypt</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The mobile number must start with + to include country code e.g. +971xxxxxxxxx</inlineHelpText>
    <label>Secondary Mobile</label>
    <type>Phone</type>
</CustomField>