MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Selected_Typology__c.field-meta.xml
<CustomField>
    <fullName>Selected_Typology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Typology (EOI_Range) selected by the lead via the public invite microsite.</description>
    <label>Selected Typology</label>
    <referenceTo>EOI_Range__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>