MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Send_Self_Gen_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Self_Gen_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Self Gen Notification</label>
    <type>Checkbox</type>
</CustomField>