MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Site_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Site_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the lead has confirmed their typology selection via the public invite microsite. One-way lock.</description>
    <label>Site Confirmed</label>
    <type>Checkbox</type>
</CustomField>