MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Site_Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>Site_Confirmed_At__c</fullName>
    <description>Timestamp the lead confirmed via the public invite microsite.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Confirmed At</label>
    <type>DateTime</type>
</CustomField>