MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/SMSBitlyURL__c.field-meta.xml
<CustomField>
    <fullName>SMSBitlyURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SMSBitlyURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>