MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Source_Entity__c.field-meta.xml
<CustomField>
    <fullName>Source_Entity__c</fullName>
    <label>Source Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modon - Egypt</fullName>
            </value>
            <value>
                <fullName>Modon - UAE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>