MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/SubSource__c.field-meta.xml
<CustomField>
    <fullName>SubSource__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Snapchat</fullName>
            </value>
            <value>
                <fullName>TikTok</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>EOI Emailer</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Programmatic Ads</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Broker Portal</fullName>
            </value>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Management Lead</fullName>
            </value>
            <value>
                <fullName>Self-Generated</fullName>
            </value>
            <value>
                <fullName>3D Interactive</fullName>
            </value>
            <value>
                <fullName>Sales Centre</fullName>
            </value>
            <value>
                <fullName>AdRoll</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>International Roadshows</fullName>
            </value>
            <value>
                <fullName>Partner Broker</fullName>
            </value>
            <value>
                <fullName>Trade Event</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>instagram</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Outbound Retargeting</fullName>
            </value>
            <value>
                <fullName>About tree eventually had arrived on They said Take it was</fullName>
                <isActive>false</isActive>
                <label>About tree eventually had arrived on They said Take it was</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>