MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Sync_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Sync_Lead_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sync Lead Date</label>
    <type>Date</type>
</CustomField>