MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/TradeName__c.field-meta.xml
<CustomField>
    <fullName>TradeName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>