MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Type_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Registration__c</fullName>
    <label>Type of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Registration</valueSetName>
    </valueSet>
</CustomField>