MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/UAE_Pass_Verified__c.field-meta.xml
<CustomField>
    <fullName>UAE_Pass_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAE Pass Verified</label>
    <type>Checkbox</type>
</CustomField>