MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/UAEResidentStatus__c.field-meta.xml
<CustomField>
    <fullName>UAEResidentStatus__c</fullName>
    <description>Represents if the lead is UAE resident or not</description>
    <label>UAE Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UAEResidentStatus</valueSetName>
    </valueSet>
</CustomField>