MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anchor</fullName>
            </value>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Coffee Shops</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Data Tower</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>External Seating</fullName>
            </value>
            <value>
                <fullName>Flagships</fullName>
            </value>
            <value>
                <fullName>Food Court</fullName>
            </value>
            <value>
                <fullName>Facade</fullName>
            </value>
            <value>
                <fullName>Full Floor</fullName>
            </value>
            <value>
                <fullName>Guaranteed Income</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Kiosks</fullName>
            </value>
            <value>
                <fullName>Lineshop</fullName>
            </value>
            <value>
                <fullName>Land Plot</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Disclosed</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Office Building</fullName>
            </value>
            <value>
                <fullName>Office Floor</fullName>
            </value>
            <value>
                <fullName>Office Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>