MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/UTMURL__c.field-meta.xml
<CustomField>
    <fullName>UTMURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>