MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/VAT_Certificate_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Certificate_Type__c</fullName>
    <label>VAT Certificate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAT Registration Certificate</fullName>
            </value>
            <value>
                <fullName>VAT Undertaking Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>