MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/VisitorType__c.field-meta.xml
<CustomField>
    <fullName>VisitorType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visitor Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>