MODON MRE BPDEV/force-app/main/default/objects/Lead/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>