MODON MRE BPDEV/force-app/main/default/objects/Lead/validationRules/Block_Special_Characters_In_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Special_Characters_In_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
REGEX(FirstName, &quot;^[\\u0600-\\u06FF\\u0750-\\u077F\\u08A0-\\u08FF A-Za-z\\s]+$&quot;)
) &amp;&amp;
NOT(
REGEX(LastName, &quot;^[\\u0600-\\u06FF\\u0750-\\u077F\\u08A0-\\u08FF A-Za-z\\s]+$&quot;)
)</errorConditionFormula>
    <errorMessage>First Name and Last Name cannot contain numbers or special characters. Please enter alphabetic characters only.</errorMessage>
</ValidationRule>