MODON MRE BPDEV/force-app/main/default/objects/Lead/validationRules/Block_Website_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Website_Leads</fullName>
    <active>true</active>
    <errorConditionFormula>AND(UTMSource__c =&apos;https://www.modon.com/real-estate/nawayef-parkviews?utm_source=googlesearch&amp;utm_medium=paid&amp;utm_campaign=nawayef-park-views&amp;utm_objective=lead&amp;utm_bid=cpl&amp;utm_language=en&amp;utm_aud=propertyprospects&amp;gad_source=1&amp;gclid=CjwKCAiA2JG9BhAuEiwAH_zf3lts30Ad24BjJcO&apos;, ISNEW())</errorConditionFormula>
    <errorMessage>Lead can not be created with this UTM Source.</errorMessage>
</ValidationRule>