MODON MRE BPDEV/force-app/main/default/objects/Lead/validationRules/Blocking_Invalid_Leads.validationRule-meta.xml
<ValidationRule>
    <fullName>Blocking_Invalid_Leads</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(LastName),ISBLANK( En_Email__c ),ISBLANK(  En_MobilePhone__c ), CreatedBy.CommunityNickname =&apos;AdminM&apos; )</errorConditionFormula>
    <errorMessage>Leads without phone number and email can not be created/ updated.</errorMessage>
</ValidationRule>