MODON MRE BPDEV/force-app/main/default/objects/Lead/validationRules/Broker_Corporate_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Corporate_Mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(LeadSource) = &apos;Broker Portal&apos; &amp;&amp; TEXT(CustomerType__c) = &apos;New Client&apos; &amp;&amp; TEXT(CustomerSubType__c) = &apos;CORPORATE&apos; &amp;&amp; ( ISBLANK( Company ) || ISBLANK( TradeName__c ) || ISBLANK( UnifiedNumber__c ) || ISBLANK( TEXT(OwnedBy__c) ) )</errorConditionFormula>
    <errorMessage>Company Trade Name Unified Number and OwnedBy are mandatory fields for Corporate Customer</errorMessage>
</ValidationRule>