MODON MRE BPDEV/force-app/main/default/objects/Lead/validationRules/Broker_Portal_Fields_Should_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Portal_Fields_Should_be_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(LeadSource) &lt;&gt; &apos;Broker Portal&apos; 
&amp;&amp; (NOT(ISBLANK(BrokerAgency__c)) 
    || NOT(ISBLANK(BrokerAgent__c)) 
    || NOT(ISBLANK(BrokerAgentMobile__c)) 
    || NOT(ISBLANK(BrokerAgentName__c))) 
&amp;&amp; NOT(ISPICKVAL(Source_Entity__c, &apos;Modon - Egypt&apos;))</errorConditionFormula>
    <errorMessage>Following fields should be blank if Lead Source is NOT Broker Portal: Broker Agency, Broker Agent, Broker Agent Mobile, Broker Agent Name.</errorMessage>
</ValidationRule>