MODON MRE BPDEV/force-app/main/default/objects/Lead/validationRules/Broker_Portal_Lead_Fields_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Portal_Lead_Fields_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    TEXT(LeadSource) = &apos;Broker Portal&apos;,
    ( ISBLANK( BrokerAgency__c ) || 
      ISBLANK( BrokerAgent__c ) || 
      ISBLANK( BrokerAgentMobile__c ) || 
      ISBLANK( BrokerAgentName__c ) 
    ),
    NOT(ISPICKVAL(Source_Entity__c, &apos;Modon - Egypt&apos;))  
)</errorConditionFormula>
    <errorDisplayField>AdName__c</errorDisplayField>
    <errorMessage>Following fields should NOT be blank if Lead Source is Broker Portal: Broker Agency, Broker Agent, Broker Agent Mobile, Broker Agent Name.</errorMessage>
</ValidationRule>